// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`</Card> renders the <Card /> and toggle the card feature 1`] = `
<div
  class="card__Group-sc-1czwl97-2 fzMIGl"
>
  <div
    class="card__Container-sc-1czwl97-1 cffHFS"
  >
    <p
      class="card__Title-sc-1czwl97-0 iAhEeK"
    >
      Documentaries
    </p>
    <div
      class="card__Entities-sc-1czwl97-12 hRzEHD"
    >
      <div
        class="card__Item-sc-1czwl97-13 jHefSS"
        data-testid="tiger-king-item-feature"
      >
        <img
          class="card__Image-sc-1czwl97-14 iyUxA-D"
          src="/images/series/documentaries/tiger-king/small.jpg"
        />
        <div
          class="card__Meta-sc-1czwl97-11 jIORCX"
        >
          <p
            class="card__SubTitle-sc-1czwl97-3 qXPdm"
          >
            Tiger King
          </p>
          <p
            class="card__Text-sc-1czwl97-4 jmmRSD"
          >
            Tiger King description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card__Container-sc-1czwl97-1 cffHFS"
  >
    <p
      class="card__Title-sc-1czwl97-0 iAhEeK"
    >
      Feel Good
    </p>
    <div
      class="card__Entities-sc-1czwl97-12 hRzEHD"
    >
      <div
        class="card__Item-sc-1czwl97-13 jHefSS"
        data-testid="juno-item-feature"
      >
        <img
          class="card__Image-sc-1czwl97-14 iyUxA-D"
          src="/images/series/feel-good/juno/small.jpg"
        />
        <div
          class="card__Meta-sc-1czwl97-11 jIORCX"
        >
          <p
            class="card__SubTitle-sc-1czwl97-3 qXPdm"
          >
            Juno
          </p>
          <p
            class="card__Text-sc-1czwl97-4 jmmRSD"
          >
            Juno description
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`</Card> renders the <Card /> with populated data 1`] = `
<div
  class="card__Group-sc-1czwl97-2 fzMIGl"
>
  <div
    class="card__Container-sc-1czwl97-1 cffHFS"
  >
    <p
      class="card__Title-sc-1czwl97-0 iAhEeK"
    >
      Documentaries
    </p>
    <div
      class="card__Entities-sc-1czwl97-12 hRzEHD"
    >
      <div
        class="card__Item-sc-1czwl97-13 jHefSS"
      >
        <img
          class="card__Image-sc-1czwl97-14 iyUxA-D"
          src="/images/series/documentaries/tiger-king/small.jpg"
        />
        <div
          class="card__Meta-sc-1czwl97-11 jIORCX"
        >
          <p
            class="card__SubTitle-sc-1czwl97-3 qXPdm"
          >
            Tiger King
          </p>
          <p
            class="card__Text-sc-1czwl97-4 jmmRSD"
          >
            Tiger King description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card__Container-sc-1czwl97-1 cffHFS"
  >
    <p
      class="card__Title-sc-1czwl97-0 iAhEeK"
    >
      Feel Good
    </p>
    <div
      class="card__Entities-sc-1czwl97-12 hRzEHD"
    >
      <div
        class="card__Item-sc-1czwl97-13 jHefSS"
      >
        <img
          class="card__Image-sc-1czwl97-14 iyUxA-D"
          src="/images/series/feel-good/juno/small.jpg"
        />
        <div
          class="card__Meta-sc-1czwl97-11 jIORCX"
        >
          <p
            class="card__SubTitle-sc-1czwl97-3 qXPdm"
          >
            Juno
          </p>
          <p
            class="card__Text-sc-1czwl97-4 jmmRSD"
          >
            Juno description
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
